k8s-demo-node-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: k8s-demo-node-app
        image: email2barun/k8s-demo-node-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
