k8s-demo-node-app/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-demo-node-app
  labels:
    app: node-app
spec:
  containers:
  - name: k8s-demo-node-app
    image: email2barun/k8s-demo-node-app
    ports:
    - containerPort: 8080
